--- a/test cases/common/47 options/meson.build
+++ b/test cases/common/47 options/meson.build
@@ -12,6 +12,11 @@ if get_option('combo_opt') != 'combo'
   error('Incorrect value to combo option.')
 endif
 
+if get_option('array_opt') != ['one', 'two']
+  message(get_option('array_opt'))
+  error('Incorrect value for array option')
+endif
+
 # If the default changes, update test cases/unit/13 reconfigure
 if get_option('b_lto') != false
   error('Incorrect value in base option.')
