llvm test: Replace tinfo with something else
Archlinux doesn't package tinfo, and the non-distro maintained package
(in the AUR), doesn't provide a pkgconfig, it just symlinks libncurses.
So just pick something else. glib-2.0 is used elsewhere in meson's test
suite, so that should be safe.

--- a/test cases/frameworks/15 llvm/meson.build
+++ b/test cases/frameworks/15 llvm/meson.build
@@ -17,5 +17,5 @@ executable('sum', 'sum.c',  dependencies : [
   llvm_dep,
   dependency('zlib'),
   meson.get_compiler('c').find_library('dl', required : false),
-  dependency('tinfo'),
+  dependency('glib-2.0'),
   ])
