Let pkgconfig generation use external dependencies for libraries
This allows for the pkgconfig generation to use the results of the
find_library method.

--- a/test cases/common/51 pkgconfig-gen/meson.build
+++ b/test cases/common/51 pkgconfig-gen/meson.build
@@ -44,3 +44,17 @@ pkgg.generate(
   description : 'A foo library.',
   variables : ['foo=bar', 'datadir=${prefix}/data']
 )
+
+# Testing for external library inclusion
+libm = meson.get_compiler('c').find_library('m', required : true)
+
+lib3 = shared_library('libbar', 'simple.c',
+  name_prefix : '',
+  version : libver)
+
+pkgg.generate(
+  libraries : [ lib3, libm ],
+  name : 'libbar',
+  version : libver,
+  description : 'A foo library.',
+)
