Use re.sub instead of replace loop
This also prohibits recursive substitution.

--- a/test cases/common/16 configure file/meson.build
+++ b/test cases/common/16 configure file/meson.build
@@ -109,3 +109,14 @@ configs = [
 foreach c : configs
     test('@0@'.format(c), file_contains_py, args: [ c, test_string ])
 endforeach
+
+# Test variable is substituted only once
+conf5 = configuration_data()
+conf5.set('var', '@var2@')
+conf5.set('var2', 'error')
+configure_file(
+  input : 'config5.h.in',
+  output : '@BASENAME@',
+  configuration : conf5
+)
+test('test5', executable('prog5', 'prog5.c'))
