--- a/test cases/common/140 get define/meson.build
+++ b/test cases/common/140 get define/meson.build
@@ -16,6 +16,9 @@ foreach lang : ['c', 'cpp']
   elif host_system == 'cygwin'
     d = cc.get_define('__CYGWIN__')
     assert(d == '1', '__CYGWIN__ value is @0@ instead of 1'.format(d))
+  elif host_system == 'haiku'
+    d = cc.get_define('__HAIKU__')
+    assert(d == '1', '__HAIKU__ value is @0@ instead of 1'.format(d))
   else
     error('Please report a bug and help us improve support for this platform')
   endif
