--- a/test cases/common/166 custom target template substitution/meson.build
+++ b/test cases/common/166 custom target template substitution/meson.build
@@ -6,12 +6,12 @@ config = configuration_data()
 
 in = configure_file(configuration : config, output : 'x@IN')
 
-# Check that substitution does not find @foo@ and then misses @INPUT0@.
+# Check that substitution does not find @FOO@ and then misses @INPUT0@.
 # Check the resulting x@INPUT1@ is not replaced.
 foo = custom_target('runcheck',
   input : [in, 'foo.c.in'],
   output : 'foo.c',
-  command : [check, '-D@foo@INPUT0@PUT1@', '@INPUT1@', '@OUTPUT@']
+  command : [check, '-D@FOO@INPUT0@PUT1@', '@INPUT1@', '@OUTPUT@']
 )
 
 executable('foo', foo)
