[Tests] Minor update for CI on Fedora
'test cases/frameworks/9 wxwidgets' fails to build with clang on
Fedora because it needs C++11 enabled.

Signed-off-by: Alexis Jeandet <alexis.jeandet@member.fsf.org>

--- a/test cases/frameworks/9 wxwidgets/meson.build
+++ b/test cases/frameworks/9 wxwidgets/meson.build
@@ -1,4 +1,4 @@
-project('wxwidgets test', 'cpp')
+project('wxwidgets test', 'cpp', default_options : ['cpp_std=c++11'])
 
 wxd = dependency('wxwidgets', version : '>=5', required : false)
 wxd = dependency('wxwidgets', version : '>=3.0.0', required : false)
