Fix `array` type name
c9351ce30c03d107279090da7825096951a705d3 introduced the type as `array`,
so mintro should expose it under the same name.

(while at it, rename test 169 to be coherent)

--- a/test cases/common/169 array option/meson.build
+++ b/test cases/common/169 array option/meson.build
@@ -12,6 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-project('stringarray default options')
+project('array default options')
 
 assert(get_option('array') == ['foo', 'bar'], 'Default value for array is not equal to choices')
