--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,14 @@ environment:
       compiler: msys2-mingw
       backend: ninja
 
+    - arch: x64
+      compiler: msys2-mingw
+      backend: ninja
+
+    - arch: x64
+      compiler: cygwin
+      backend: ninja
+
     - arch: x86
       compiler: msvc2010
       backend: ninja
@@ -25,14 +33,6 @@ environment:
       compiler: msvc2015
       backend: vs2015
       BOOST_ROOT: C:\Libraries\Boost_1_59_0
-
-    - arch: x64
-      compiler: cygwin
-      backend: ninja
-
-    - arch: x64
-      compiler: msys2-mingw
-      backend: ninja
 
     - arch: x64
       compiler: msvc2017
@@ -78,27 +78,27 @@ install:
   - cmd: if %compiler%==msvc2010 ( call "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\vcvarsall.bat" %arch% )
   - cmd: if %compiler%==msvc2015 ( call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" %arch% )
   - cmd: if %compiler%==msvc2017 ( call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%arch% )
+  - cmd: if %compiler%==cygwin ( set PYTHON=python3 ) else ( set PYTHON=python )
   - ps: |
         If($Env:compiler -eq 'msys2-mingw') {
           If($Env:arch -eq 'x86') {
             $env:Path = 'C:\msys64\mingw32\bin;' + $env:Path
+            $env:MESON_PYTHON_PATH = 'C:\msys64\mingw32\bin'
+            $env:PYTHON = 'python3'
+            C:\msys64\usr\bin\pacman -S --noconfirm mingw32/mingw-w64-i686-python3
           } Else {
             $env:Path = 'C:\msys64\mingw64\bin;' + $env:Path
+            $env:MESON_PYTHON_PATH = 'C:\msys64\mingw64\bin'
+            $env:PYTHON = 'python3'
+            C:\msys64\usr\bin\pacman -S --noconfirm mingw64/mingw-w64-x86_64-python3
           }
         }
   - cmd: if not %compiler%==cygwin ( set "PATH=%cd%;%MESON_PYTHON_PATH%;%PATH%;" )
-  - cmd: if %compiler%==cygwin ( set PYTHON=python3 ) else ( set PYTHON=python )
   - cmd: if %compiler%==cygwin ( set WRAPPER=ci\run-in-cygwin.bat )
   - cmd: if %compiler%==cygwin ( %WRAPPER% which %PYTHON% ) else ( where %PYTHON% )
 
-  # Install additional packages needed for specific builds.
-  # This was originally downloaded from http://bootstrap.pypa.io/get-pip.py,
-  # but they have a broken certificate (on Windows) and an HSTS policy that
-  # forces usage of HTTPS, so we mirror our own copy.
-  - ps: If($Env:compiler -eq 'msys2-mingw') {(new-object Net.WebClient).DownloadFile('https://nirbheek.in/files/meson/get-pip.py', 'C:\projects\meson\get-pip.py')}
   # pkg-config is needed for the pkg-config tests on msvc
   - ps: If($Env:compiler.StartsWith('msvc')) {(new-object net.webclient).DownloadFile('http://nirbheek.in/files/binaries/pkg-config/win32/pkg-config.exe', 'C:\projects\meson\pkg-config.exe')}
-  - cmd: if %compiler%==msys2-mingw ( %PYTHON% "C:\projects\meson\get-pip.py" )
   - cmd: if %compiler%==cygwin ( call ci\appveyor-install.bat )
   - ps: |
         If($Env:compiler -like 'msvc*') {
