Verify that mkenums_simple() does not install C sources
When asked to installed the generated C header file.

--- a/test cases/frameworks/7 gnome/mkenums/meson.build
+++ b/test cases/frameworks/7 gnome/mkenums/meson.build
@@ -123,6 +123,7 @@ enums4 = gnome.mkenums_simple('enums4', sources : 'meson-sample.h',
 enumexe4 = executable('enumprog4', 'main4.c', enums4, dependencies : gobj)
 
 enums5 = gnome.mkenums_simple('enums5', sources : 'meson-sample.h',
+                              install_header : true,
                               decorator : 'MESON_EXPORT',
                               header_prefix : '#include "meson-decls.h"')
 enumexe5 = executable('enumprog5', main, enums5, dependencies : gobj)
