gdbus_codegen: Return 2 targets when docbook is disabled
Also document this behaviour, test it, and fix the return value from
the module -- we create one target and return it thrice to the build
file

--- a/test cases/frameworks/7 gnome/gdbus/meson.build
+++ b/test cases/frameworks/7 gnome/gdbus/meson.build
@@ -1,3 +1,12 @@
+gdbus_src = gnome.gdbus_codegen('generated-gdbus-no-docbook', 'com.example.Sample.xml',
+  interface_prefix : 'com.example.',
+  namespace : 'Sample',
+  annotations : [
+    ['com.example.Hello()', 'org.freedesktop.DBus.Deprecated', 'true']
+  ],
+)
+assert(gdbus_src.length() == 2, 'expected 2 targets')
+
 gdbus_src = gnome.gdbus_codegen('generated-gdbus', 'com.example.Sample.xml',
   interface_prefix : 'com.example.',
   namespace : 'Sample',
@@ -6,6 +15,7 @@ gdbus_src = gnome.gdbus_codegen('generated-gdbus', 'com.example.Sample.xml',
   ],
   docbook : 'generated-gdbus-doc'
 )
+assert(gdbus_src.length() == 3, 'expected 3 targets')
 
 gdbus_exe = executable('gdbus-test', 'gdbusprog.c',
   gdbus_src,
