custom targets: Don't replace \\ with /
This is no longer required since we always use `/` as the path
separator for file arguments on Windows now. The only effect this
now has is to mangle the string args people pass to custom targets.

Closes https://github.com/mesonbuild/meson/issues/1564

--- a/test cases/common/48 test args/meson.build
+++ b/test cases/common/48 test args/meson.build
@@ -27,9 +27,5 @@ test('file arg', testerpy, args : testfile, env : env_array)
 
 copy = find_program('copyfile.py')
 tester = executable('tester', 'tester.c')
-testfilect = custom_target('testfile',
-                           input : testfile,
-                           output : 'outfile.txt',
-                           build_by_default : true,
-                           command : [copy, '@INPUT@', '@OUTPUT@'])
+subdir('sub1')
 test('custom target arg', tester, args : testfilect, env : env_array)
