Substitute output file then check for conflict.
Fixes Issue #4323.
The check to see if a call to configure_file() overwrites the output of
a preceding call should perform the substitution for the output file
before doing the check.

Added tests to ensure the proper behaviour.

--- a/test cases/common/14 configure file/meson.build
+++ b/test cases/common/14 configure file/meson.build
@@ -218,6 +218,30 @@ configure_file(
   output: 'no_write_conflict.txt',
   configuration: conf)
 
+# Test that @BASENAME@ is substituted before checking and does not create a warning.
+configure_file(
+  input: 'differentafterbasename1.in',
+  output: '@BASENAME@',
+  configuration: conf
+)
+configure_file(
+  input: 'differentafterbasename2.in',
+  output: '@BASENAME@',
+  configuration: conf
+)
+
+# Test that @BASENAME@ is substituted before checking and does create a warning on conflict.
+configure_file(
+  input: 'sameafterbasename.in',
+  output: '@BASENAME@',
+  configuration: conf
+)
+configure_file(
+  input: 'sameafterbasename.in2',
+  output: '@BASENAME@',
+  configuration: conf
+)
+
 test('configure-file', test_file)
 
 cdata = configuration_data()
