tests: Fix fortran + cpp test for ifort
To make ifort like rand we need to link with ifport, or we don't get
rand.

--- a/test cases/fortran/9 cpp/meson.build
+++ b/test cases/fortran/9 cpp/meson.build
@@ -6,5 +6,16 @@ if cpp.get_id() == 'clang'
   error('MESON_SKIP_TEST Clang C++ does not find -lgfortran for some reason.')
 endif
 
-e = executable('cppfort', 'main.cpp', 'fortran.f')
+fc = meson.get_compiler('fortran')
+link_with = []
+if fc.get_id() == 'intel'
+  link_with += fc.find_library('ifport')
+endif
+
+e = executable(
+  'cppfort',
+  ['main.cpp', 'fortran.f'],
+  dependencies : [link_with],
+)
+
 test('C++ FORTRAN', e)
